--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
         <title>Vincent Le Corre</title><meta name="Description" content="Персональный сайт Венсана Ле Корре"><meta property="og:url" content="https://ru.vincentlecorre.org/">
   <meta property="og:site_name" content="Vincent Le Corre">
   <meta property="og:title" content="Start">
-  <meta property="og:description" content="🇷🇺 Русский (Russian) Примечание: Обратите внимание, что русский язык не является моим родным. Я использовал программу перевода для подготовки этой версии. За более точной и оригинальной версией обратитесь к английскому или французскому тексту.
-Преступления McDonald’s проводил глобальные промо-игры, выдавая их за честные игры случая. Однако компания неоднократно фальсифицировала шансы на выигрыш, систематически подделывая вероятность. Это была не просто вводящая в заблуждение реклама — это был тщательно спланированный, жестокий обман.
+  <meta property="og:description" content="🇷🇺 Русский (Russian)
+Примечание: Обратите внимание, что русский язык не является моим родным. Я использовал программу перевода для подготовки этой версии. За более точной и оригинальной версией обратитесь к английскому или французскому тексту.
+Преступления
+McDonald’s проводил глобальные промо-игры, выдавая их за честные игры случая. Однако компания неоднократно фальсифицировала шансы на выигрыш, систематически подделывая вероятность. Это была не просто вводящая в заблуждение реклама — это был тщательно спланированный, жестокий обман.
 Эти мафиозные методы представляют собой массовый потребительский обман и отмывание денег. Они подпадают под действие Конвенции ООН против транснациональной организованной преступности (Палермская конвенция), особенно статьи 5, которая криминализирует участие в организованной преступной группе и серьезные трансграничные преступления.">
   <meta property="og:locale" content="ru">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Start">
-  <meta name="twitter:description" content="🇷🇺 Русский (Russian) Примечание: Обратите внимание, что русский язык не является моим родным. Я использовал программу перевода для подготовки этой версии. За более точной и оригинальной версией обратитесь к английскому или французскому тексту.
-Преступления McDonald’s проводил глобальные промо-игры, выдавая их за честные игры случая. Однако компания неоднократно фальсифицировала шансы на выигрыш, систематически подделывая вероятность. Это была не просто вводящая в заблуждение реклама — это был тщательно спланированный, жестокий обман.
+  <meta name="twitter:description" content="🇷🇺 Русский (Russian)
+Примечание: Обратите внимание, что русский язык не является моим родным. Я использовал программу перевода для подготовки этой версии. За более точной и оригинальной версией обратитесь к английскому или французскому тексту.
+Преступления
+McDonald’s проводил глобальные промо-игры, выдавая их за честные игры случая. Однако компания неоднократно фальсифицировала шансы на выигрыш, систематически подделывая вероятность. Это была не просто вводящая в заблуждение реклама — это был тщательно спланированный, жестокий обман.
 Эти мафиозные методы представляют собой массовый потребительский обман и отмывание денег. Они подпадают под действие Конвенции ООН против транснациональной организованной преступности (Палермская конвенция), особенно статьи 5, которая криминализирует участие в организованной преступной группе и серьезные трансграничные преступления.">
 <meta name="application-name" content="My cool site">
 <meta name="apple-mobile-web-app-title" content="My cool site">
@@ -127,17 +131,17 @@
         alt="/images/avatar-blue-color-shirt-512px-512px.jpg"
         title="/images/avatar-blue-color-shirt-512px-512px.jpg" width="512" height="512" /></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://github.com/ecthrwatch" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github fa-fw" aria-hidden="true"></i></a><a href="https://linkedin.com/in/x-v-france" title="LinkedIn" target="_blank" rel="noopener noreffer me"><i class="fab fa-linkedin fa-fw" aria-hidden="true"></i></a><a href="https://x.com/ecthrwatch" title="X" target="_blank" rel="noopener noreffer me"><i class="fab fa-x fa-fw" aria-hidden="true"></i></a><a href="https://t.me/vincentlecorre" title="Telegram" target="_blank" rel="noopener noreffer me"><i class="fab fa-telegram-plane fa-fw" aria-hidden="true"></i></a><a href="https://weibo.com/7055094295" title="微博" target="_blank" rel="noopener noreffer me"><i class="fab fa-weibo fa-fw" aria-hidden="true"></i></a><a href="mailto:vincent@ecthrwatch.org" title="Email" rel="me"><i class="far fa-envelope fa-fw" aria-hidden="true"></i></a></div></div>
 <div class="single">
-                <div class="content" id="content"><p><strong>🇷🇺 Русский (Russian)</strong>
+                <div class="content" id="content"><p><strong>🇷🇺 Русский (Russian)</strong><br>
 <strong>Примечание:</strong> Обратите внимание, что русский язык не является моим родным. Я использовал программу перевода для подготовки этой версии. За более точной и оригинальной версией обратитесь к английскому или французскому тексту.</p>
-<p><strong>Преступления</strong>
+<p><strong>Преступления</strong><br>
 McDonald’s проводил глобальные промо-игры, выдавая их за честные игры случая. Однако компания неоднократно фальсифицировала шансы на выигрыш, систематически подделывая вероятность. Это была не просто вводящая в заблуждение реклама — это был тщательно спланированный, жестокий обман.</p>
 <p>Эти мафиозные методы представляют собой массовый потребительский обман и отмывание денег. Они подпадают под действие <strong>Конвенции ООН против транснациональной организованной преступности (Палермская конвенция)</strong>, особенно <strong>статьи 5</strong>, которая криминализирует участие в организованной преступной группе и серьезные трансграничные преступления.</p>
-<p><strong>Масштаб преступлений</strong>
+<p><strong>Масштаб преступлений</strong><br>
 Более тридцати лет McDonald’s обманывал миллиарды людей в десятках стран. Экономический ущерб включает утрату законных шансов на выигрыш, манипуляцию рынком и недобросовестное конкурентное преимущество. Общая сумма ущерба может достигать триллионов долларов. Десятки тысяч франчайзи, хоть и правово независимых, способствовали осуществлению этих схем. Многие будут ссылаться на невежество, но их поведение свидетельствует о преступной небрежности. Если бы закон выполнялся надлежащим образом, McDonald’s и его франчайзи должны были бы обанкротиться и быть привлечены к уголовной ответственности.</p>
-<p><strong>Молчание Франции, вмешательство разведки США</strong>
+<p><strong>Молчание Франции, вмешательство разведки США</strong><br>
 Во Франции несколько раз подделывали судебные документы. McDonald’s, похоже, находился под внутренней защитой со стороны высоких чиновников, судей, прокуроров и законодателей, которые провалили свою конституционную обязанность надзора. Эта защита, возможно, доходила до министров, премьер-министров и, возможно, даже до президента Эммануэля Макрона — что стало бы серьезным конституционным кризисом.</p>
 <p>В Китае, где я ныне проживаю, ко мне обратились люди, с которыми я уже был знаком. Они предложили мне работу без раскрытия своей истинной личности. Только после того, как они признали серьёзность преступлений McDonald’s, они представились агентами разведки США и вновь сделали предложение.</p>
-<p><strong>Мирное сосуществование наций под взглядом Бога</strong>
+<p><strong>Мирное сосуществование наций под взглядом Бога</strong><br>
 Я люблю и Китай, и Соединённые Штаты. Но я люблю мою жену и моих родственников ещё сильнее. Мой тесть — бывший функционер КПК. Принятие предложения от военной разведки США могло бы поставить мою семью под серьёзную угрозу. Сейчас я живу под постоянной угрозой мести — не только со стороны Китая, но также Франции и США.
 Единственный путь, по которому я могу идти с <strong>чистой совестью</strong>, — это путь моего <em>веры</em>: отвечать перед Богом, а не перед правительствами, оставаться верным истине, справедливости и идеалу мирного сосуществования наций как моральной обязанности перед Богом.</p>
 <div style="text-align: center; font-style: italic;">
