--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ McDonald’s проводил глобальные промо-игры, выда
         "@type": "WebSite",
         "url": "https:\/\/ru.vincentlecorre.org\/","inLanguage": "ru","author": {
                 "@type": "Person",
-                "name": "Vincent Le Corre"
+                "name": "Венсан Ле Корре (Vincent Le Corre)"
             },"description": "Персональный сайт Венсана Ле Корре","name": "Vincent Le Corre"
     }
     </script></head>
@@ -156,7 +156,7 @@ McDonald’s проводил глобальные промо-игры, выда
 </div>
             </div></div></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2025</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">Vincent Le Corre</a></span></div>
+        <div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2025</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.linkedin.com/in/x-v-france/" target="_blank">Венсан Ле Корре (Vincent Le Corre)</a></span></div>
         </div>
     </footer></div>
 
