--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ McDonald’s проводил глобальные промо-игры, выда
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="Vincent Le Corre">Vincent Le Corre</a>
+            <a href="/" title="Vincent Le Corre">Венсан Ле Корре • Vincent Le Corre</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a href="javascript:void(0);" class="menu-item theme-switch" title="Сменить Тему">
@@ -84,7 +84,7 @@ McDonald’s проводил глобальные промо-игры, выда
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="Vincent Le Corre">Vincent Le Corre</a>
+                <a href="/" title="Vincent Le Corre">Венсан Ле Корре • Vincent Le Corre</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -145,14 +145,22 @@ McDonald’s проводил глобальные промо-игры, выда
 Я люблю и Китай, и Соединённые Штаты. Но я люблю мою жену и моих родственников ещё сильнее. Мой тесть — бывший функционер КПК. Принятие предложения от военной разведки США могло бы поставить мою семью под серьёзную угрозу. Сейчас я живу под постоянной угрозой мести — не только со стороны Китая, но также Франции и США.
 Единственный путь, по которому я могу идти с <strong>чистой совестью</strong>, — это путь моего <em>веры</em>: отвечать перед Богом, а не перед правительствами, оставаться верным истине, справедливости и идеалу мирного сосуществования наций как моральной обязанности перед Богом.</p>
 <div style="text-align: center; font-style: italic;">
-“Да не перестанет суд, как вода, и правота — как сильная река.”<br>
+«Да не прольётся ли суд, как вода, и правда — как сильный поток!»<br>
 Амос 5:24 <!-- (Синодальный перевод) -->
 </div>
-<p>Даже когда суды молчат, когда институты рушатся, и сильные злоупотребляют своей властью, божественная справедливость не дрёмает.<br>
-Она течёт вперёд. Безжалостная, очищающая и неудержимая.<br>
-Подобно реке Янцзы, она следует своим руслом до конца.<br>
-И я последую этому же пути.</p>
-<p>Венсан Ле Корре (Vincent Le Corre)</p>
+<p>Даже когда суды молчат, когда рушатся институты, а могущественные злоупотребляют властью — божественная справедливость не спит.<br>
+Она продолжает течь. Неумолимая. Очищающая. Неудержимая.<br>
+Одна известная китайская пословица выражает ту же непреодолимую силу:</p>
+<div style="text-align: center;">「<span style="font-weight: bold;">长江黄河不会倒流</span>」<br><span style="font-style: italic;">“Река Янцзы и река Хуанхэ никогда не потекут вспять.”</span></div>
+<p>Она напоминает нам: есть силы, которые невозможно обратить вспять — так же как и воля Творца движется вперёд, непреклонная и неотразимая.<br>
+Божественная справедливость не медлит. Она пронзает тьму, очищает от зла и <em>всегда</em> торжествует.</p>
+<p>И так же как реки Янцзы и Хуанхэ всегда следуют своим путём до конца, так и я пойду по этому узкому пути к единственной подлинной победе:<br>
+к той, что восстанавливает справедливость, приносит мир и исполняет волю Неба.</p>
+<p>Венсан Ле Корре • Vincent Le Corre</p>
+<p>
+  <a href="https://www.linkedin.com/in/x-v-france">Нажмите здесь, чтобы подписаться на меня в LinkedIn</a><br/>
+  Вы также можете отправить мне электронное письмо по этому адресу: <a href="mailto:vincent@ecthrwatch.org">vincent@ecthrwatch.org</a>
+</p>
 </div>
             </div></div></div>
             </main><footer class="footer">
