--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="noodp" />
         <title>Vincent Le Corre</title><meta name="Description" content="Персональный сайт Венсана Ле Корре"><meta property="og:url" content="https://ru.vincentlecorre.org/">
   <meta property="og:site_name" content="Vincent Le Corre">
-  <meta property="og:title" content="Венсан Ле Корре">
+  <meta property="og:title" content="Vincent Le Corre • Венсан Ле Корре • 陆圣乔">
   <meta property="og:description" content="🇷🇺 Русский
 Примечание: Обратите внимание, что русский язык не является моим родным. Я использовал программу перевода для подготовки этой версии. За более точной и оригинальной версией обратитесь к английскому или французскому тексту.
 Преступления
@@ -18,7 +18,7 @@ McDonald’s проводил глобальные промо-игры, выда
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Венсан Ле Корре">
+  <meta name="twitter:title" content="Vincent Le Corre • Венсан Ле Корре • 陆圣乔">
   <meta name="twitter:description" content="🇷🇺 Русский
 Примечание: Обратите внимание, что русский язык не является моим родным. Я использовал программу перевода для подготовки этой версии. За более точной и оригинальной версией обратитесь к английскому или французскому тексту.
 Преступления
@@ -147,7 +147,20 @@ McDonald’s проводил глобальные промо-игры, выда
                 </a></div>
     </div>
 </header><main class="main">
-                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><img
+                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div style="
+  text-align: center;
+  font-size: 1.6em;
+  line-height: 2;
+  letter-spacing: 0.3em;
+  font-weight: bold;
+">
+  <span style="letter-spacing: 0.1em;"> Vincent  Le  Corre    </span><br>
+  <span style="letter-spacing: 0.1em;"> Венсан  Ле  Корре   </span><br>
+  <span>陆</span><span>　</span><span>圣</span><span>　</span><span>乔</span><br>
+  <span>光</span><span>　</span><span>之</span><span>　</span><span>树</span><br>
+  <span>神</span><span>　</span><span>战</span><span>　</span><span>士</span>
+</div>
+<div class="home-avatar"><img
         class="lazyload"
         src="/svg/loading.min.svg"
         data-src="/images/avatar-blue-color-shirt-512px-512px.jpg"
@@ -181,7 +194,8 @@ McDonald’s проводил глобальные промо-игры, выда
 Божественная справедливость не медлит. Она пронзает тьму, очищает от зла и <em>всегда</em> торжествует.</p>
 <p>И так же как реки Янцзы и Хуанхэ всегда следуют своим путём до конца, так и я пойду по этому узкому пути к единственной подлинной победе:<br>
 к той, что восстанавливает справедливость, приносит мир и исполняет волю Неба.</p>
-<p>Венсан Ле Корре • Vincent Le Corre</p>
+<p>Vincent Le Corre<br>
+Венсан Ле Корре</p>
 <p>
   <a href="https://www.linkedin.com/in/x-v-france">Нажмите здесь, чтобы подписаться на меня в LinkedIn</a><br/>
   Вы также можете отправить мне электронное письмо по этому адресу: <a href="mailto:vincent@ecthrwatch.org">vincent@ecthrwatch.org</a>
